examples/test/testpolicy18959.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18959
  namespace: namespace13
spec:
  podSelector:
    matchLabels:
      key15: value24
      key14: value44
      key21: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value5
          key19: value23
          key36: value27
      podSelector:
        matchLabels:
          key13: value42
          key39: value18
          key12: value33
